--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -857,3 +857,4 @@ multiple-process-order-handle-is-developing=Ch\u1EE9c n\u0103ng x\u1EED l\u00FD 
 no-action-history-were-found=Kh\u00F4ng c\u00F3 l\u1ECBch s\u1EED t\u00ECm ki\u1EBFm \u0111\u01B0\u1EE3c t\u00ECm th\u1EA5y
 no-process-order-were-found=Kh\u00F4ng t\u00ECm th\u1EA5y phi\u1EBFu x\u1EED l\u00FD n\u00E0o
 not-attachment-file=Kh\u00F4ng c\u00F3 t\u1EC7p tin \u0111\u00EDnh k\u00E8m
+not-dynamic-form=Kh\u00F4ng c\u00F3 bi\u1EC3u m\u1EABu
