--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -858,3 +858,4 @@ no-action-history-were-found=Kh\u00F4ng c\u00F3 l\u1ECBch s\u1EED t\u00ECm ki\u1
 no-process-order-were-found=Kh\u00F4ng t\u00ECm th\u1EA5y phi\u1EBFu x\u1EED l\u00FD n\u00E0o
 not-attachment-file=Kh\u00F4ng c\u00F3 t\u1EC7p tin \u0111\u00EDnh k\u00E8m
 not-dynamic-form=Kh\u00F4ng c\u00F3 bi\u1EC3u m\u1EABu
+pre-action=Thao t\u00E1c th\u1EF1c hi\u1EC7n
