--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -861,3 +861,4 @@ not-dynamic-form=Kh\u00F4ng c\u00F3 bi\u1EC3u m\u1EABu
 pre-action=Thao t\u00E1c th\u1EF1c hi\u1EC7n
 pre-action-date=Ng\u00E0y x\u1EED l\u00FD
 pre-action-note=Th\u00F4ng tin \u0111\u00E3 x\u1EED l\u00FD
+pre-action-user=Ng\u01B0\u1EDDi \u0111\u00E3 x\u1EED l\u00FD
