--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -866,3 +866,4 @@ pre-action-user=Ng\u01B0\u1EDDi \u0111\u00E3 x\u1EED l\u00FD
 ## duplicate key - line -865 process=X\u1EED l\u00FD
 process-dossier=X\u1EED l\u00FD
 process-order=Phi\u1EBFu x\u1EED l\u00FD h\u1ED3 s\u01A1
+## duplicate key - line -868 process-step=B\u01B0\u1EDBc x\u1EED l\u00FD
