--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -877,3 +877,4 @@ return-date=Ng\u00E0y h\u1EB9n tr\u1EA3
 ## duplicate key - line -876 service-name=Th\u1EE7 t\u1EE5c
 ## duplicate key - line -877 service-no=M\u00E3 ti\u1EBFp nh\u1EADn
 ## duplicate key - line -878 step-name=B\u01B0\u1EDBc x\u1EED l\u00FD
+## duplicate key - line -879 subject-name=Ch\u1EE7 h\u1ED3 s\u01A1
