--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -879,3 +879,4 @@ return-date=Ng\u00E0y h\u1EB9n tr\u1EA3
 ## duplicate key - line -878 step-name=B\u01B0\u1EDBc x\u1EED l\u00FD
 ## duplicate key - line -879 subject-name=Ch\u1EE7 h\u1ED3 s\u01A1
 ## duplicate key - line -880 upload-file=T\u1EA3i t\u1EC7p
+## duplicate key - line -881 view-attachment=Xem t\u1EC7p \u0111\u00EDnh k\u00E8m
