--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -880,3 +880,4 @@ return-date=Ng\u00E0y h\u1EB9n tr\u1EA3
 ## duplicate key - line -879 subject-name=Ch\u1EE7 h\u1ED3 s\u01A1
 ## duplicate key - line -880 upload-file=T\u1EA3i t\u1EC7p
 ## duplicate key - line -881 view-attachment=Xem t\u1EC7p \u0111\u00EDnh k\u00E8m
+## duplicate key - line -882 view-form=Xem bi\u1EC3u m\u1EABu
