--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -894,3 +894,4 @@ top_tabs_dossierfilelist=Giấy tờ
 ## duplicate key - line -893 filter-by-service-domain=-Lọc theo lĩnh vực thủ tục-
 filter-by-dossier-status=-Lọc theo trạng thái hồ sơ-
 ## duplicate key - line -895 no=STT
+## duplicate key - line -896 receive-datetime=Ngày tiếp nhận
