--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -897,3 +897,4 @@ filter-by-dossier-status=-Lọc theo trạng thái hồ sơ-
 ## duplicate key - line -896 receive-datetime=Ngày tiếp nhận
 ## duplicate key - line -897 reception-no=Mã tiếp nhận
 subjectname=Chủ hồ sơ
+serviceinfo-name=Thủ tục
