--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -904,3 +904,4 @@ dossier-not-found=Hồ sơ số
 ## duplicate key - line -903 no-dossier-were-found=Không tìm thấy hồ sơ nào
 ## duplicate key - line -904 process-order=Phiếu xử lý hồ sơ
 dossieroverview=Thông tin hồ sơ
+dossierfile=Nội dung hồ sơ
