--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -901,3 +901,4 @@ serviceinfo-name=Thủ tục
 ## duplicate key - line -900 dossier-status=Trạng thái hồ sơ
 finish-datetime=Ngày hoàn thành
 dossier-not-found=Hồ sơ số
+## duplicate key - line -903 no-dossier-were-found=Không tìm thấy hồ sơ nào
