--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -909,3 +909,4 @@ dossierhistory=Lịch sử xử lý
 address=Địa chỉ
 ## duplicate key - line -909 contact-name=Người liên hệ
 contact-telno=Số điện thoại
+## duplicate key - line -911 contact-email=Email
