--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -910,3 +910,4 @@ address=Địa chỉ
 ## duplicate key - line -909 contact-name=Người liên hệ
 contact-telno=Số điện thoại
 ## duplicate key - line -911 contact-email=Email
+## duplicate key - line -912 receive-datetime=Ngày tiếp nhận
