--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -911,3 +911,4 @@ address=Địa chỉ
 contact-telno=Số điện thoại
 ## duplicate key - line -911 contact-email=Email
 ## duplicate key - line -912 receive-datetime=Ngày tiếp nhận
+uuid=Hồ sơ số
