--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -915,3 +915,4 @@ uuid=Hồ sơ số
 estimate-datetime=Ngày hẹn trả
 modified-datetime=Ngày cập nhật
 ## duplicate key - line -916 note=Ghi chú
+## duplicate key - line -917 step-name=Bước
