--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -918,3 +918,4 @@ modified-datetime=Ngày cập nhật
 ## duplicate key - line -917 step-name=Bước
 ## duplicate key - line -918 action-name=Thao tác
 action-datetime=Ngày
+## duplicate key - line -920 action-user=Người xử lý
