--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -916,3 +916,4 @@ estimate-datetime=Ngày hẹn trả
 modified-datetime=Ngày cập nhật
 ## duplicate key - line -916 note=Ghi chú
 ## duplicate key - line -917 step-name=Bước
+## duplicate key - line -918 action-name=Thao tác
