--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -924,3 +924,4 @@ filter-by-dossier-template=-Lọc theo biểu mẫu giấy tờ-
 only-view-file-result=Chỉ xem giấy tờ kết quả
 no-dossierfile-were-found=Không có giầy tờ nào được tìm thấy
 dossierfile-fileno=Số văn bản
+dossierfile-filedate=Ngày văn bản
