--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -926,3 +926,4 @@ no-dossierfile-were-found=Không có giầy tờ nào được tìm thấy
 dossierfile-fileno=Số văn bản
 dossierfile-filedate=Ngày văn bản
 dossierfile-displayname=Tên văn bản
+dossierfile-receptionno=Hồ sơ số
