--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -934,3 +934,4 @@ dossier-status-new=Tạo mới
 dossier-status-receiving=Chờ tiếp nhận
 dossier-status-waiting=Chờ bổ sung giấy tờ
 dossier-status-paying=Chờ thanh toán
+dossier-status-processing=Đang xử lý
