--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -936,3 +936,4 @@ dossier-status-waiting=Chờ bổ sung giấy tờ
 dossier-status-paying=Chờ thanh toán
 dossier-status-processing=Đang xử lý
 dossier-status-done=Hoàn thành xử lý
+dossier-status-system=Hệ thống đang xử lý
