--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -944,3 +944,4 @@ status-soon=Sớm hạn
 status-ontime=Đúng hạn
 status-toosoon=Chưa đến hạn
 status-toolate=Đã quá hạn
+estimatedate-status=Hạn xử lý
