--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -945,3 +945,4 @@ status-ontime=Đúng hạn
 status-toosoon=Chưa đến hạn
 status-toolate=Đã quá hạn
 estimatedate-status=Hạn xử lý
+exporting-file=Đang xuất báo cáo
