--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -960,3 +960,4 @@ actor-system=X\u1EED l\u00FD t\u1EF1 \u0111\u1ED9ng
 administration-name=C\u01A1 quan th\u1EF1c hi\u1EC7n
 beautiful-life=CU\u1ED8C S\u1ED0NG THU\u1EACN TI\u1EC6N H\u01A0N
 config-servicepage=L\u1EF1a ch\u1ECDn trang c\u00F3 t\u00ECm ki\u1EBFm d\u1ECBch v\u1EE5 c\u00F4ng
+config-stored=C\u1EA5u h\u00ECnh portlet \u0111\u00E3 \u0111\u01B0\u1EE3c l\u01B0u
