--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -964,3 +964,4 @@ config-stored=C\u1EA5u h\u00ECnh portlet \u0111\u00E3 \u0111\u01B0\u1EE3c l\u01B
 create-date=Ng\u00E0y t\u1EA1o
 doi-tuong=\u0110\u1ED1i t\u01B0\u1EE3ng
 dossier-file-search-keywords=-Nh\u1EADp t\u1EEB kh\u00F3a t\u00ECm ki\u1EBFm gi\u1EA5y t\u1EDD-
+dossier-list=Tra c\u1EE9u h\u1ED3 s\u01A1
