--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -968,3 +968,4 @@ dossier-list=Tra c\u1EE9u h\u1ED3 s\u01A1
 dossier-monitoring-dossier-file-list=Gi\u1EA5y t\u1EDD
 dossier-monitoring-search=H\u1ED3 s\u01A1
 dossier-monitoring-service=Th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
+dossier-reindex-error=\u0110\u00E1nh ch\u1EC9 m\u1EE5c h\u1ED3 s\u01A1 kh\u00F4ng th\u00E0nh c\u00F4ng
