--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -970,3 +970,4 @@ dossier-monitoring-search=H\u1ED3 s\u01A1
 dossier-monitoring-service=Th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
 dossier-reindex-error=\u0110\u00E1nh ch\u1EC9 m\u1EE5c h\u1ED3 s\u01A1 kh\u00F4ng th\u00E0nh c\u00F4ng
 dossier-reindex-success=\u0110\u00E1nh ch\u1EC9 m\u1EE5c h\u1ED3 s\u01A1 th\u00E0nh c\u00F4ng
+dossier-search-keywords=-Nh\u1EADp t\u1EEB kh\u00F3a t\u00ECm ki\u1EBFm ho\u1EB7c m\u00E3 ti\u1EBFp nh\u1EADn h\u1ED3 s\u01A1 \u0111\u1EC3 tra c\u1EE9u t\u00ECnh tr\u1EA1ng x\u1EED l\u00FD-
