--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -984,3 +984,4 @@ ghi-chu=Ghi ch\u00FA
 ## duplicate key - line -983 gov-agency-name=Th\u1EE7 t\u1EE5c
 govagency-name=C\u01A1 quan c\u1EA5p
 ## duplicate key - line -985 javax.portlet.description=Tra c\u1EE9u h\u1ED3 s\u01A1 v\u00E0 th\u1EE7 t\u1EE5c
+## duplicate key - line -986 javax.portlet.short-title=Tra c\u1EE9u h\u1ED3 s\u01A1 v\u00E0 th\u1EE7 t\u1EE5c
