--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -994,3 +994,4 @@ ket-qua-tra-cuu-ho-so=K\u1EBFt qu\u1EA3 tra c\u1EE9u h\u1ED3 s\u01A1
 owner-name=Ng\u01B0\u1EDDi nh\u1EADn
 qua-trinh-xu-ly-ho-so=Qu\u00E1 tr\u00ECnh x\u1EED l\u00FD h\u1ED3 s\u01A1
 ## duplicate key - line -995 receive-datetime=Ng\u00E0y ti\u1EBFp nh\u1EADn
+## duplicate key - line -996 reception-no=M\u00E3 ti\u1EBFp nh\u1EADn h\u1ED3 s\u01A1
