--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -995,3 +995,4 @@ owner-name=Ng\u01B0\u1EDDi nh\u1EADn
 qua-trinh-xu-ly-ho-so=Qu\u00E1 tr\u00ECnh x\u1EED l\u00FD h\u1ED3 s\u01A1
 ## duplicate key - line -995 receive-datetime=Ng\u00E0y ti\u1EBFp nh\u1EADn
 ## duplicate key - line -996 reception-no=M\u00E3 ti\u1EBFp nh\u1EADn h\u1ED3 s\u01A1
+reindexdossier=\u0110\u00E1nh l\u1EA1i ch\u1EC9 m\u1EE5c h\u1ED3 s\u01A1
