--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1007,3 +1007,4 @@ status=Tr\u1EA1ng th\u00E1i
 ## duplicate key - line -1006 status-late=Tr\u1EC5 h\u1EA1n
 ## duplicate key - line -1007 status-ontime=\u0110\u00FAng h\u1EA1n
 ## duplicate key - line -1008 status-soon=S\u1EDBm h\u1EA1n
+## duplicate key - line -1009 status-toolate=\u0110\u00E3 qu\u00E1 h\u1EA1n
