--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1008,3 +1008,4 @@ status=Tr\u1EA1ng th\u00E1i
 ## duplicate key - line -1007 status-ontime=\u0110\u00FAng h\u1EA1n
 ## duplicate key - line -1008 status-soon=S\u1EDBm h\u1EA1n
 ## duplicate key - line -1009 status-toolate=\u0110\u00E3 qu\u00E1 h\u1EA1n
+## duplicate key - line -1010 status-toosoon=Ch\u01B0a \u0111\u1EBFn h\u1EA1n
