--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1011,3 +1011,8 @@ status=Tr\u1EA1ng th\u00E1i
 ## duplicate key - line -1010 status-toosoon=Ch\u01B0a \u0111\u1EBFn h\u1EA1n
 ## duplicate key - line -1011 subject-name=Ch\u1EE7 h\u1ED3 s\u01A1
 update-datetime=Th\u1EDDi gian
+##
+## Language 20
+##
+
+
