--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1023,3 +1023,4 @@ BIDV=Ng\u00E2n h\u00E0ng \u0110\u1EA7u t\u01B0 v\u00E0 ph\u00E1i tri\u1EC3na
 BVB=Ng\u00E2n h\u00E0ng TMCP B\u1EA3o Vi\u1EC7t
 DAB=Ng\u00E2n h\u00E0ng TMCP \u0110\u00F4ng \u00C1
 DaiA-Bank=Ng\u00E2n h\u00E0ng TMCP \u0110\u1EA1i \u00C1
+EIB=Ng\u00E2n h\u00E0ng TMCP Xu\u1EA5t nh\u1EADp kh\u1EA9u Vi\u1EC7t Nam
