--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1024,3 +1024,4 @@ BVB=Ng\u00E2n h\u00E0ng TMCP B\u1EA3o Vi\u1EC7t
 DAB=Ng\u00E2n h\u00E0ng TMCP \u0110\u00F4ng \u00C1
 DaiA-Bank=Ng\u00E2n h\u00E0ng TMCP \u0110\u1EA1i \u00C1
 EIB=Ng\u00E2n h\u00E0ng TMCP Xu\u1EA5t nh\u1EADp kh\u1EA9u Vi\u1EC7t Nam
+GPBank=Ng\u00E2n h\u00E0ng TMCP D\u1EA7u kh\u00ED to\u00E0n c\u1EA7u
