--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1026,3 +1026,4 @@ DaiA-Bank=Ng\u00E2n h\u00E0ng TMCP \u0110\u1EA1i \u00C1
 EIB=Ng\u00E2n h\u00E0ng TMCP Xu\u1EA5t nh\u1EADp kh\u1EA9u Vi\u1EC7t Nam
 GPBank=Ng\u00E2n h\u00E0ng TMCP D\u1EA7u kh\u00ED to\u00E0n c\u1EA7u
 HDB=Ng\u00E2n h\u00E0ng TMCP Ph\u00E1t tri\u1EC3n nh\u00E0 TPHCM
+IVB=Ng\u00E2n h\u00E0ng TNHH Indovina
