--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1027,3 +1027,4 @@ EIB=Ng\u00E2n h\u00E0ng TMCP Xu\u1EA5t nh\u1EADp kh\u1EA9u Vi\u1EC7t Nam
 GPBank=Ng\u00E2n h\u00E0ng TMCP D\u1EA7u kh\u00ED to\u00E0n c\u1EA7u
 HDB=Ng\u00E2n h\u00E0ng TMCP Ph\u00E1t tri\u1EC3n nh\u00E0 TPHCM
 IVB=Ng\u00E2n h\u00E0ng TNHH Indovina
+MB=Ng\u00E2n h\u00E0ng TMCP Qu\u00E2n \u0111\u1ED9i
