--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1029,3 +1029,4 @@ HDB=Ng\u00E2n h\u00E0ng TMCP Ph\u00E1t tri\u1EC3n nh\u00E0 TPHCM
 IVB=Ng\u00E2n h\u00E0ng TNHH Indovina
 MB=Ng\u00E2n h\u00E0ng TMCP Qu\u00E2n \u0111\u1ED9i
 MSB=Ng\u00E2n h\u00E0ng TMCP H\u00E0ng h\u1EA3i
+Master-Card=Master Card
