--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1036,3 +1036,4 @@ NamA-Bank=Ng\u00E2n h\u00E0ng TMCP Nam \u00C1
 OCB=Ng\u00E2n h\u00E0ng TMCP Ph\u01B0\u01A1ng \u0110\u00F4ng
 OceanBank=Ng\u00E2n h\u00E0ng TMCP \u0110\u1EA1i D\u01B0\u01A1ng
 PGBank=Ng\u00E2n h\u00E0ng TMCP X\u0103ng d\u1EA7u Petrolimex
+PNB=Ng\u00E2n h\u00E0ng TMCP Ph\u01B0\u01A1ng Nam
