--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1037,3 +1037,4 @@ OCB=Ng\u00E2n h\u00E0ng TMCP Ph\u01B0\u01A1ng \u0110\u00F4ng
 OceanBank=Ng\u00E2n h\u00E0ng TMCP \u0110\u1EA1i D\u01B0\u01A1ng
 PGBank=Ng\u00E2n h\u00E0ng TMCP X\u0103ng d\u1EA7u Petrolimex
 PNB=Ng\u00E2n h\u00E0ng TMCP Ph\u01B0\u01A1ng Nam
+SHB=Ng\u00E2n h\u00E0ng TMCP S\u00E0i G\u00F2n H\u00E0 N\u1ED9i
