--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1038,3 +1038,4 @@ OceanBank=Ng\u00E2n h\u00E0ng TMCP \u0110\u1EA1i D\u01B0\u01A1ng
 PGBank=Ng\u00E2n h\u00E0ng TMCP X\u0103ng d\u1EA7u Petrolimex
 PNB=Ng\u00E2n h\u00E0ng TMCP Ph\u01B0\u01A1ng Nam
 SHB=Ng\u00E2n h\u00E0ng TMCP S\u00E0i G\u00F2n H\u00E0 N\u1ED9i
+SVB=Ng\u00E2n h\u00E0ng Li\u00EAn doanh Shinhanvina
