--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1043,3 +1043,4 @@ SacomBank=Ng\u00E2n h\u00E0ng TMCP S\u00E0i G\u00F2n Th\u01B0\u1EDDng \
 SaigonBank=Ng\u00E2n h\u00E0ng TMCP S\u00E0i G\u00F2n c\u00F4ng \
 SeAb=Ng\u00E2n h\u00E0ng TMCP \u0110\u00F4ng Nam \u00C1
 TCB=Ng\u00E2n  h\u00E0ng TMCP K\u1EF9 th\u01B0\u01A1ng Vi\u1EC7t Nam
+TPB=Ti\u1EC1n Phong Bank
